crates/oxc_react_compiler/tests/snapshots/no-alias-callback-return-snapshots-context.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/no-alias-callback-return-snapshots-context.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let xs;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		let cb = _temp;
		xs = [0].map(() => cb);
		cb = () => count++;
		$[0] = xs;
	} else {
		xs = $[0];
	}
	return xs;
}
function _temp() {
	return null;
}
