crates/oxc_react_compiler/tests/snapshots/no-alias-return-spread-this-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/no-alias-return-spread-this-arg.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		const callbacks = [_temp, () => () => count++];
		t0 = [0].map(...callbacks);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	return null;
}
