crates/oxc_react_compiler/tests/snapshots/no-cache-slots-no-import.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/no-cache-slots-no-import.js
---
// @compilationMode:"all"
function useMyHook(t0) {
	const { a, b } = t0;
	return a + b;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useMyHook,
	params: [{
		a: 1,
		b: 2
	}]
};
