crates/oxc_react_compiler/tests/snapshots/no-flow-bailout-unrelated.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/no-flow-bailout-unrelated.js
---
// @enableFlowSuppressions
function useX() {}
function Foo(props) {
	useX();
	return null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
