crates/oxc_react_compiler/tests/snapshots/nonmutated-spread-hook-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/nonmutated-spread-hook-return.js
---
import { identity, Stringify, useIdentity } from "shared-runtime";
function Component() {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		x: "Hello",
		z: "World"
	}]
};
