crates/oxc_react_compiler/tests/snapshots/nonmutated-spread-props-local-indirection.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/nonmutated-spread-props-local-indirection.js
---
import { c as _c } from "react/compiler-runtime";
import { identity, Stringify } from "shared-runtime";
function Component(t0) {
	const $ = _c(6);
	let x;
	let z;
	if ($[0] !== t0) {
		const { x: t1, ...rest } = t0;
		x = t1;
		const restAlias = rest;
		z = restAlias.z;
		identity(z);
		$[0] = t0;
		$[1] = x;
		$[2] = z;
	} else {
		x = $[1];
		z = $[2];
	}
	let t1;
	if ($[3] !== x || $[4] !== z) {
		t1 = <Stringify x={x} z={z} />;
		$[3] = x;
		$[4] = z;
		$[5] = t1;
	} else {
		t1 = $[5];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		x: "Hello",
		z: "World"
	}]
};
